plugins {
	id 'org.springframework.boot' version '4.1.0' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
	group = 'com.personal'
	version = '0.0.1-SNAPSHOT'
	description = '해피갤러리 공방 예약·상품·결제 서비스'

	repositories {
		mavenCentral()
		maven {
			url = uri('https://jitpack.io')
			content { includeGroup 'com.github.usingsky' }
		}
	}
}

subprojects {
	apply plugin: 'java-library'
	apply plugin: 'io.spring.dependency-management'
	ext['httpcore5.version'] = '5.4.3'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(25)
			vendor = JvmVendorSpec.ADOPTIUM
		}
	}

	// 스프링 부트 족보 가져오기
	dependencyManagement {
		imports {
			mavenBom "org.springframework.boot:spring-boot-dependencies:4.1.0"
		}
	}

	// Spring MVC 의 @PathVariable / @RequestParam 이 reflection 으로 파라미터 이름을 읽으므로,
	// boot 플러그인이 없는 모듈에도 -parameters 를 명시적으로 켠다.
	tasks.withType(JavaCompile).configureEach {
		options.compilerArgs << '-parameters'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}
